@startuml
  skinparam linetype ortho

	entity DeviceType {
		* type_id: Long
		--
		* variant: String
		* status: String
		* name: String
		* image_blob: String
		* tags: List<Tag>
		* creation_date: LocalDate
		* change_date: LocalDate
	}

	entity AudioType {
    		--
    		* connector_id: Long
    	}

	entity CameraType {
		--
		* mount_id: Long
		* system_id: Long
		* photo_resolution_id: Long
		* autofocus: boolean
	}

	entity DroneType {
		--
		* max_range_kilometers: int
		* flight_time_minutes: int
		* requires_license: boolean
	}

	entity LensType {
		--
		* mount_id: Long
		* f_stop: double
		* focal_length: int
	}

	entity LightType {
		--
		* watts: int
		* rgb: boolean
		* variable_temperature: boolean
	}

	entity MicrophoneType {
		--
		* needs_recorder: boolean
		* connector: Long
		* needs_power: boolean
	}

	entity SimpleType {
	    --
	    * description: String
	}

	entity StabilizerType {
		--
		* max_weight_kilograms: int
		* number_of_axis: int
	}

	entity TripodType {
		--
		* head_id: Long
		* height_centimeters: int
	}


	DeviceType <|-down- AudioType
	DeviceType <|-down- CameraType
	DeviceType <|-down- DroneType
	DeviceType <|-down- LensType
	DeviceType <|-down- LightType
	DeviceType <|-down- MicrophoneType
	DeviceType <|-down- SimpleType
	DeviceType <|-down- StabilizerType
	DeviceType <|-down- TripodType

	entity DeviceTypeAttribute {
		* attribute_id: Long
		--
		* name: String
		* details: String
	}

	entity AudioConnector { }

	entity CameraResolution {
		--
		* resolution: String
	}

	entity CameraSensorDEPRECATED {
		--
		* size: String
	}

	entity CameraSystem { }

	entity LensMount { }

	entity TripodHead { }

	DeviceTypeAttribute <|-up- AudioConnector
	DeviceTypeAttribute <|-up- CameraResolution
	DeviceTypeAttribute <|-up- CameraSensorDEPRECATED
	DeviceTypeAttribute <|-up- CameraSystem
	DeviceTypeAttribute <|-up- LensMount
	DeviceTypeAttribute <|-up- TripodHead

	AudioType }o--|| AudioConnector
	CameraType }o--|| LensMount
	CameraType }o--|| CameraResolution
	CameraType }o--|| CameraSystem
	LensType }o--|| LensMount
	MicrophoneType }o--|| AudioConnector
	TripodType }o--|| TripodHead

	entity Device {
		* device_id: Long
		--
		* number: String
		* type: Long
		* serial: String
		* note: String
		* creation_date: LocalDate
		* change_date: LocalDate
		* status: String
	}

	entity Rent {
        * rent_id: Long
        --
        * student_id: Long
        * device_id: Long
        * teacher_id_start: Long
        * teacher_id_end: Long
        * rent_start: LocalDate
        * rent_end_planned: LocalDate
        * rent_end_actual: LocalDate
        * creation_date: LocalDateTime
        * change_date: LocalDateTime
        * status: RentStatusEnum
        * verification_code: String
        * verification_message: String
        * note: String
        * device_string: String
        * type: RentTypeEnum
    }

	entity Tag {
		* tag_id : Long
		--
		* name: String
		* description: String
	}

	entity User {
        * user_id: String
        --
        * firstname: String
        * lastname: String
        * email: String
        * username: String
        * school_class: String
    }

	entity DeviceSet {
		* set_id: Long
		--
		* name: String
		* device_types: List<DeviceType>
	}

	Device }o-down-|| DeviceType
	DeviceType }|-left-o{ DeviceSet
	DeviceType }o-right-o{ Tag

	Rent }o--|| Device
	Rent }o-up-|| User
	Rent }o-right-|| User
	Rent }o-right-|| User

	User }o--|| DeviceType
@enduml